caputils-0.7.4
--------------

	* fix: sigreturn is not well defined, uses SIG_IGN instead.
	* fix: crash when file stream comment was null.

caputils-0.7.3
--------------

	* add: filter_*_set functions
	* add: stream_addr_str() to set a local filename easily.
	* add: stream_addr_type() to get type in host order
	* change: splitting filter structs so the packed and unpacked are
	          different (reordered, removed cruft etc)
	* change: logmsg writes tag centered.
	* add: {,v}logmsg from libmarc is more suitable here.
	* change: const correctness, fixing warnings.
	* change: using size_t where appropriate (e.g. fread)
	* change: made fields in struct stream unsigned.
	* fix: h_proto is 2 bytes.
	* fix: minor build-system fixes, mostly related to make dist.
	* change: adding a third library (libcap_stream) which deals only with
	          the stream. libcap_utils is utility functions only.
	* change: rename ethaton.c to utils.c
	* change: Moving stream_addr_t functions to a new source file: address.c
	* change: Renamed struct destination_t to stream_addr_t
	* change: Renamed {create,open,close}stream to stream_{create,open,close}
	* fix: Fixed capdump.
	* change: more man-pages.
	* change: stream_read takes cap_head pointer instead of char-buffer.
	* fix: Fixing compability issues with linux-2.4