@@ -1,6 +1,9 @@
 caputils-0.7.4
 --------------
 
+	* add: support for dropping groups and leading zeros in ethernet
+	       addresses, e.g. 01::01 is read as 01:00:00:00:00:01
+	* add: support for address prefix.
 	* fix: sigreturn is not well defined, uses SIG_IGN instead.
 	* fix: crash when file stream comment was null.
 
